--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://placehold.co/15x15/191840/ffffff?text=SAIT" type="image/x-icon">
     <title>SAIT - School of AI and Technology</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- Font Awesome for icons -->
