--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
   </head>
   <body>
+    <header>
     <nav class="navbar">
       <div class="container">
         <div class="logo">
@@ -48,7 +49,8 @@
         </ul>
       </div>
     </nav>
-
+    </header>
+    <main>
     <section id="home" class="hero">
       <div class="container">
         <div class="hero-content">
@@ -304,7 +306,7 @@
         </div>
       </div>
     </section>
-
+</main>
     <footer class="footer">
       <a
         class="whatsapp-icon"
